# diskrw

./: README.md
include/: manager.h  reader.h  threadpool.h  threadsafefile.h  writer.h
src/: manager.cpp  reader.cpp  threadpool.cpp  writer.cpp
tests/: CMakeLists.txt  writertest.cpp
